syntax = "proto3";

package io.users.admin.api;

option java_outer_classname = "AdminApi";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

service AdminService {
    option (kalix.codegen) = {
      value_entity: {
        name: "io.users.admin.domain.Admin"
        entity_type: "admins"
        state: "io.users.admin.domain.AdminState"
      }
    };
  
    rpc CreateAdmin(Admin) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/create_admin"
            body: "*"
        };
    }

    rpc GetAdmin(GetAdminRequest) returns (Admin) {
        option (google.api.http) = {
            post: "/get_admin"
            body: "*"
        };
    }

    rpc UpdateAdmin(admin.api.Admin) returns (google.protobuf.Empty);
}

message Admin {
    string id = 1;
    string email = 2 [(kalix.field).entity_key = true];
    string password = 3;
    string first_name = 4;
    string last_name = 5;
    string role = 6;
}

message GetAdminRequest {
    string email = 1 [(kalix.field).entity_key = true];
}