syntax = "proto3";

package io.users.admin.domain;

option java_outer_classname = "AdminDomain";

message AdminState {
    string id = 1;
    string email = 2;
    string password = 3;
    string first_name = 4;
    string last_name = 5;
    string role = 6;
}